# rs-todo

./: .gitignore  Cargo.toml  Makefile  README.md  diesel.toml  state.json
migrations/2024-07-14-083459_create_to_do_items/: up.sql
migrations/2024-12-23-125213_create_users/: down.sql  up.sql
src/: config.rs  database.rs  jwt.rs  main.rs  processes.rs  state.rs
src/css/: base.css  main.css
src/javascript/: main.js
src/json_serialization/: mod.rs  todo_item.rs  todo_items.rs
src/models/item/: item.rs
src/models/user/: new_user.rs  user.rs
src/templates/: main.html
src/templates/components/: header.html  login.css  login.html
src/todo/: enums.rs  mod.rs
src/todo/structs/: base.rs  done.rs  pending.rs
src/todo/traits/: create.rs  delete.rs  edit.rs  get.rs
src/views/: mod.rs
src/views/app/: content_loader.rs  items.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/todo/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/users/: create.rs  mod.rs
