[package]
name = "rs-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0.2"
actix-web = "4.5.1"
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
diesel = { version = "2.2.0", features = ["postgres", "chrono", "r2d2"] }
dotenvy = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }
serde_yaml = "0.9.34"
lazy_static = "1.5.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
